feat: Add architecture documentation and deployment guides for Cloudflare Workers
- Created ARCHITECTURE.md detailing the serverless-first design, component architecture, request flow, and scalability.
- Added CLOUDFLARE_DEPLOY.md for quick deployment instructions on Cloudflare Workers.
- Introduced DEPLOYMENT.md covering deployment steps for various cloud platforms including Railway, Render, Heroku, AWS Lambda, Google Cloud Run, Vercel, and Cloudflare Workers.
- Implemented worker.js as the entry point for Cloudflare Workers using Hono framework, with token management and API functions.
- Configured wrangler.toml for Cloudflare Workers deployment settings.

--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,12 @@ LOG_LEVEL=info
 # • Environment tokens take priority over session/tokens.json
 # • Keep your tokens secret! Never commit .env to git
 # • Get your token: https://chat.qwen.ai → Login → F12 → Application → Local Storage → token
+
+# ─── API Keys for Proxy Authentication (Optional) ───────────────
+# If set, clients must provide one of these keys via Authorization header
+# Leave empty to disable proxy authentication
+# Format: Comma-separated list of keys
+# API_KEYS=secret-key-1,secret-key-2,secret-key-3
+
+# Example:
+# API_KEYS=my-production-key,my-dev-key
